@@ -276,8 +276,8 @@
 # usequitmsg = "false"
 
 
-# autoaway = "mode": miau can set user away automatically. This option allows
-#		to define when to do that. This option may be one of the
+# autoaway = "selection": miau can set user away automatically. This option
+#		allows to define when to do that. This option may be one of the
 #		following: "never", "detach", "noclients".
 #			"never" ....... never set user away
 #			"detach" ...... set user away when any of the clients
@@ -289,6 +289,21 @@
 #
 # Example:
 #autoaway = "noclients"
+
+
+# chandiscon = "selection": When miau is disconnected from the server e.g.
+#		because of network problem, miau can notify user about this in
+#		a couple of ways.
+#			"nothing" .....	only print server notice
+#			"notice" ...... send notice to each channel.
+#			"part" ........ part each channel. mIRC users probably
+#					don't want to use this.
+#			"privmsg" ..... send a private message to the user
+#
+# Default: part
+#
+# Example:
+#chandiscon = "notice"
 
 
 # getnick = "selection": miau can try to reclaim your primary nick when it is
