@@ -1,6 +1,8 @@
 0.5.5 - "only 18446744073709551615 bugs remaining"
 
   * Option "autoaway" to define when to set user away if ever
+  * Option "chandiscon" to define what to do with channels when server
+    drops the connection
   * Fixed minor memory leak in rehash
 
 0.5.4-p3 - "compatible catnap"
